--- a/Assigment7/index.html
+++ b/Assigment7/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <header><h2>Angularjs app header</h2></header>
     <div ng-view></div>
+    <footer><h2>Angularjs app footer</h2></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-route.min.js"></script>
 
@@ -15,6 +17,7 @@
     <!-- <script src="controller.js"></script> -->
     <script src="main/mainController.js"></script>
     <script src="about/aboutController.js"></script>
-    <script src="dataFactory.js"></script>
+    <script src="dataFactory/dataFactory.js"></script>
+    <script src="quotes/QuoteController.js"></script>
   </body>
 </html>
